# azcam-server

./: MANIFEST.in  pyproject.toml
azcam_server/: __init__.py  cli.py  cmdserver.py  database_server.py  parameters_server.py  server.py  server_mock.py  shortcuts.py  start.py
azcam_server/scripts/: __init__.py
azcam_server/tools/: __init__.py  controller.py  display.py  ds9display.py  exposure.py  focus.py  instrument.py  sendimage.py  tempcon.py  tempcon_cryocon24.py
azcam_server/tools/arc/: controller_arc.py  exposure_arc.py  tempcon_arc.py
azcam_server/tools/archon/: controller_archon.py  exposure_archon.py  tempcon_archon.py
azcam_server/tools/ascom/: controller_ascom.py  exposure_ascom.py  tempcon_ascom.py
azcam_server/tools/mag/: controller_mag.py  exposure_mag.py  tempcon_mag.py
azcam_server/tools/observe/: __init__.py  observe.py  observing_script_example.py
docs/: make_pdoc3.bat  readme.md
docs/code/azcam/: database_console.html
