[project]
name = "azcam-server"
version = "23.2"
description = "Server application for AzCam acquisition and analysis package"
license = {file ="LICENSE"}
readme = "README.md"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
dependencies = [
    "numpy",
    "astropy",
    "pywin32; sys_platform == 'win32'",
    "fastapi",
    "uvicorn",
    "jinja2",
    "requests",
]

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam/"

[project.scripts]
azcamserver = "azcam_server.start:start"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
